# crucible-ingestion

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  constants.py  consumer-ingestion-process.py  data_ingestion.py  google_calendar.py  k8s-conf.yaml  main.py  pyproject.toml  requirements.txt  utils.py
ingestors/: api_upload_ingestor.py  bcf_ingestor.py  crucible_ingestor.py  czi_ingestor.py  dm_ingestor.py  emd_ingestor.py  emd_velox_ingestor.py  h5_ingestor.py  image_ingestor.py  insitu_pl_ingestor.py  jupiter_afm_ingestor.py  lmp_ingestor.py  lmp_ingestor_test.py  ptychography_h5_ingestor.py  scope_foundry_ingestors.py  ser_ingestor.py
